--- a/БД Телестудии.csproj
+++ b/БД Телестудии.csproj
@@ -185,12 +185,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectorEditingForm.resx">
       <DependentUpon>DirectorEditingForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Director_BroadcastPlaybackPlanForm.resx">
       <DependentUpon>Director_BroadcastPlaybackPlanForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BroadcastPlaybackPlanForm.resx">
       <DependentUpon>BroadcastPlaybackPlanForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CreationStageForm.resx">
       <DependentUpon>CreationStageForm.cs</DependentUpon>
@@ -239,6 +241,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoEditingForm.resx">
       <DependentUpon>VideoEditingForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="VideomaterialsForm.resx">
       <DependentUpon>VideomaterialsForm.cs</DependentUpon>
